gtkcombobox: Only use the child if It is a GtkCellLayout

This error was introduced in
commit 4427760bcc330f60ec5778be04274f9f8073a84d

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=625104